name:
  emacs-module-test
version:
  0.1.0.0
synopsis:
  Tests for the emacs-module package.
license:
  BSD3
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

cabal-version:
  >= 2.0
build-type:
  Simple


foreign-library emacs-module-test
  type:                native-shared
  lib-version-info:    0:0:0
  build-tools:
    hsc2hs
  c-sources:
    cbits/emacs_wrapper.c
  includes:
    emacs-module.h
  install-includes:
    emacs-module.h
  include-dirs:
    cbits
  other-modules:
    Emacs.TestsInit

  if os(Windows)
    options: standalone
  --   mod-def-file: MyForeignLib.def

  build-depends:
    base >=4.7,
    bytestring,
    emacs-module,
    safe-exceptions-checked
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -threaded
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat
      -Whi-shadowing
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-exported-signatures
  if impl(ghc >= 8.2)
    ghc-options:
      -Wcpp-undef
      -Wmissing-home-modules
      -Wunbanged-strict-patterns
  ghc-prof-options:
    -fprof-auto
