cabal-version: 3.0
name:
  emacs-module-test
version:
  0.1.0.0
synopsis:
  Tests for the emacs-module package.
license:
  Apache-2.0
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

common ghc-options
  default-language:
    GHC2021

  default-extensions:
    ImportQualifiedPost
    LambdaCase

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-redundant-constraints
    -Wno-safe
    -Wno-type-defaults
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

foreign-library emacs-module-test
  import: ghc-options
  type:
    native-shared
  -- lib-version-info:
  --   0:0:0
  c-sources:
    cbits/emacs_wrapper.c
  includes:
    emacs-module.h
  install-includes:
    emacs-module.h
  include-dirs:
    cbits
  other-modules:
    Emacs.TestsInit

  if os(Windows)
    options:
      standalone
    mod-def-file:
      emacs-module-test.def

  ghc-options:
    -threaded

  build-depends:
    , base >= 4.16 && <5
    , bytestring
    , emacs-module
  hs-source-dirs:
    src
